github/workflows: rename to `hc-releases-aws-role-duration-seconds` input
Co-authored-by: Brian Flad <bflad417@gmail.com>

--- a/.github/workflows/hashicorp.yml
+++ b/.github/workflows/hashicorp.yml
@@ -14,8 +14,8 @@ on:
         description: 'Enable release notes handling (must have previously uploaded artifact named "release-notes" with file "release-notes.txt")'
         required: false
         type: boolean
-      aws-role-duration-seconds:
-        description: 'The duration, in seconds, of the role session'
+      hc-releases-aws-role-duration-seconds:
+        description: 'AWS IAM Role session duration, in seconds, for hc-releases'
         default: 3600
         required: false
         type: number
