--- a/.github/workflows/hashicorp.yml
+++ b/.github/workflows/hashicorp.yml
@@ -67,7 +67,7 @@ jobs:
       # See also: ENGSRV-063: setup-hc-releases GitHub Action
       -
         name: Setup hc-releases
-        uses: hashicorp/actions-setup-hc-releases@v1
+        uses: hashicorp/actions-setup-hc-releases@v2
         with:
           github-token: ${{ secrets.hc-releases-github-token }}
       # See also: ENGSRV-065: setup-signore GitHub Action
@@ -80,8 +80,8 @@ jobs:
         with:
           args: release --rm-dist ${{ inputs.goreleaser-release-args }}
         env:
-          HC_RELEASES_HOST: ${{ secrets.HC_RELEASES_HOST_STAGING }}
-          HC_RELEASES_KEY: ${{ secrets.HC_RELEASES_KEY_STAGING }}
+          HC_RELEASES_HOST: ${{ secrets.hc-releases-host }}
+          HC_RELEASES_KEY: ${{ secrets.hc-releases-key }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GPG_PUBLIC_KEY_ID: ${{ inputs.gpg-public-key-id }}
           SIGNORE_CLIENT_ID: ${{ secrets.signore-client-id }}
@@ -100,30 +100,30 @@ jobs:
         with:
           args: release --release-notes ${{ steps.release-notes-download.outputs.download-path }}/release-notes.txt --rm-dist ${{ inputs.goreleaser-release-args }}
         env:
-          HC_RELEASES_HOST: ${{ secrets.HC_RELEASES_HOST_STAGING }}
-          HC_RELEASES_KEY: ${{ secrets.HC_RELEASES_KEY_STAGING }}
+          HC_RELEASES_HOST: ${{ secrets.hc-releases-host }}
+          HC_RELEASES_KEY: ${{ secrets.hc-releases-key }}x
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GPG_PUBLIC_KEY_ID: ${{ inputs.gpg-public-key-id }}
           SIGNORE_CLIENT_ID: ${{ secrets.signore-client-id }}
           SIGNORE_CLIENT_SECRET: ${{ secrets.signore-client-secret }}
           SIGNORE_SIGNER: ${{ inputs.signore-signer }}
-      -
-        name: Create Release metadata
-        uses: hashicorp/actions-hc-releases-create-metadata@main
-        with:
-          private-tools-token: ${{ secrets.CODESIGN_GITHUB_TOKEN }}
-          product-name: ${{ github.event.repository.name }}
-          version: ${{ github.ref_name }}
-          hc-releases-host: ${{ secrets.HC_RELEASES_HOST_STAGING}}
-          hc-releases-key: ${{ secrets.HC_RELEASES_KEY_STAGING }}
-      -
-        name: Promote
-        uses: hashicorp/actions-hc-releases-promote@main
-        with:
-          product-name: ${{ github.event.repository.name }}
-          version: ${{ github.ref_name }}
-          hc-releases-host: ${{ secrets.HC_RELEASES_HOST_PROD }}
-          hc-releases-key: ${{ secrets.HC_RELEASES_KEY_PROD }}
-          hc-releases-source_env_key: ${{ secrets.HC_RELEASES_KEY_STAGING }}
-          skip-terraform-registry-sync: "true"
-          hc-releases-terraform-registry-sync-token: ${{ secrets.hc-releases-terraform-registry-sync-token }}
+      # -
+      #   name: Create Release metadata
+      #   uses: hashicorp/actions-hc-releases-create-metadata@main
+      #   with:
+      #     private-tools-token: ${{ secrets.CODESIGN_GITHUB_TOKEN }}
+      #     product-name: ${{ github.event.repository.name }}
+      #     version: ${{ github.ref_name }}
+      #     hc-releases-host: ${{ secrets.HC_RELEASES_HOST_STAGING }}
+      #     hc-releases-key: ${{ secrets.HC_RELEASES_KEY_STAGING }}
+      # -
+      #   name: Promote
+      #   uses: hashicorp/actions-hc-releases-promote@main
+      #   with:
+      #     product-name: ${{ github.event.repository.name }}
+      #     version: ${{ github.ref_name }}
+      #     hc-releases-host: ${{ secrets.HC_RELEASES_HOST_PROD }}
+      #     hc-releases-key: ${{ secrets.HC_RELEASES_KEY_PROD }}
+      #     hc-releases-source_env_key: ${{ secrets.HC_RELEASES_KEY_STAGING }}
+      #     skip-terraform-registry-sync: "true"
+      #     hc-releases-terraform-registry-sync-token: ${{ secrets.hc-releases-terraform-registry-sync-token }}
