--- a/.github/workflows/hashicorp.yml
+++ b/.github/workflows/hashicorp.yml
@@ -101,7 +101,7 @@ jobs:
           args: release --release-notes ${{ steps.release-notes-download.outputs.download-path }}/release-notes.txt --rm-dist ${{ inputs.goreleaser-release-args }}
         env:
           HC_RELEASES_HOST: ${{ secrets.hc-releases-host }}
-          HC_RELEASES_KEY: ${{ secrets.hc-releases-key }}x
+          HC_RELEASES_KEY: ${{ secrets.hc-releases-key }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GPG_PUBLIC_KEY_ID: ${{ inputs.gpg-public-key-id }}
           SIGNORE_CLIENT_ID: ${{ secrets.signore-client-id }}
