--- a/.github/workflows/hashicorp.yml
+++ b/.github/workflows/hashicorp.yml
@@ -28,6 +28,12 @@ on:
         default: 'signing_subkey_CD27AB87'
         required: false
         type: string
+      hc-releases-host-prod:
+        description: 'Host for hc-releases prod'
+        required: false
+      hc-releases-host-staging:
+        description: 'Host for hc-releases staging'
+        required: false
     secrets:
       hc-releases-github-token:
         description: 'GitHub Personal Access Token to Access hc-releases (HASHI_RELEASES_GITHUB_TOKEN)'
@@ -45,11 +51,11 @@ on:
       signore-client-secret:
         description: 'signore Client Secret (SIGNORE_CLIENT_SECRET)'
         required: true
-      hc-releases-host:
-        description: 'Host for hc-releases'
+      hc-releases-key-staging:
+        description: 'Key for hc-releases staging'
         required: false
-      hc-releases-key:
-        description: 'Key for hc-releases'
+      hc-releases-key-prod:
+        description: 'Key for hc-releases prod'
         required: false
 
 
@@ -80,8 +86,8 @@ jobs:
         with:
           args: release --rm-dist ${{ inputs.goreleaser-release-args }}
         env:
-          HC_RELEASES_HOST: ${{ secrets.hc-releases-host }}
-          HC_RELEASES_KEY: ${{ secrets.hc-releases-key }}
+          HC_RELEASES_HOST: ${{ inputs.hc-releases-host-staging }}
+          HC_RELEASES_KEY: ${{ secrets.hc-releases-key-staging }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GPG_PUBLIC_KEY_ID: ${{ inputs.gpg-public-key-id }}
           SIGNORE_CLIENT_ID: ${{ secrets.signore-client-id }}
@@ -100,30 +106,30 @@ jobs:
         with:
           args: release --release-notes ${{ steps.release-notes-download.outputs.download-path }}/release-notes.txt --rm-dist ${{ inputs.goreleaser-release-args }}
         env:
-          HC_RELEASES_HOST: ${{ secrets.hc-releases-host }}
-          HC_RELEASES_KEY: ${{ secrets.hc-releases-key }}
+          HC_RELEASES_HOST: ${{ inputs.hc-releases-host-staging }}
+          HC_RELEASES_KEY: ${{ secrets.hc-releases-key-staging }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GPG_PUBLIC_KEY_ID: ${{ inputs.gpg-public-key-id }}
           SIGNORE_CLIENT_ID: ${{ secrets.signore-client-id }}
           SIGNORE_CLIENT_SECRET: ${{ secrets.signore-client-secret }}
           SIGNORE_SIGNER: ${{ inputs.signore-signer }}
-      # -
-      #   name: Create Release metadata
-      #   uses: hashicorp/actions-hc-releases-create-metadata@main
-      #   with:
-      #     private-tools-token: ${{ secrets.CODESIGN_GITHUB_TOKEN }}
-      #     product-name: ${{ github.event.repository.name }}
-      #     version: ${{ github.ref_name }}
-      #     hc-releases-host: ${{ secrets.HC_RELEASES_HOST_STAGING }}
-      #     hc-releases-key: ${{ secrets.HC_RELEASES_KEY_STAGING }}
-      # -
-      #   name: Promote
-      #   uses: hashicorp/actions-hc-releases-promote@main
-      #   with:
-      #     product-name: ${{ github.event.repository.name }}
-      #     version: ${{ github.ref_name }}
-      #     hc-releases-host: ${{ secrets.HC_RELEASES_HOST_PROD }}
-      #     hc-releases-key: ${{ secrets.HC_RELEASES_KEY_PROD }}
-      #     hc-releases-source_env_key: ${{ secrets.HC_RELEASES_KEY_STAGING }}
-      #     skip-terraform-registry-sync: "true"
-      #     hc-releases-terraform-registry-sync-token: ${{ secrets.hc-releases-terraform-registry-sync-token }}
+      -
+        name: Create Release metadata
+        uses: hashicorp/actions-hc-releases-create-metadata@main
+        with:
+          private-tools-token: ${{ secrets.hc-releases-github-token }}
+          product-name: ${{ github.event.repository.name }}
+          version: ${{ github.ref_name }}
+          hc-releases-host: ${{ inputs.hc-releases-host-staging }}
+          hc-releases-key: ${{ secrets.hc-releases-key-staging }}
+      -
+        name: Promote
+        uses: hashicorp/actions-hc-releases-promote@main
+        with:
+          product-name: ${{ github.event.repository.name }}
+          version: ${{ github.ref_name }}
+          hc-releases-host: ${{ inputs.hc-releases-host-prod }}
+          hc-releases-key: ${{ secrets.hc-releases-key-prod }}
+          hc-releases-source_env_key: ${{ secrets.hc-releases-key-staging }}
+          skip-terraform-registry-sync: "true"
+          hc-releases-terraform-registry-sync-token: ${{ secrets.hc-releases-terraform-registry-sync-token }}
