--- a/.github/workflows/hashicorp.yml
+++ b/.github/workflows/hashicorp.yml
@@ -89,7 +89,7 @@ jobs:
         name: goreleaser release (without release notes)
         uses: goreleaser/goreleaser-action@v2
         with:
-          args: release --rm-dist ${{ inputs.goreleaser-release-args }} --debug
+          args: release --rm-dist ${{ inputs.goreleaser-release-args }}
         env:
           HC_RELEASES_HOST: ${{ secrets.hc-releases-host-staging }}
           HC_RELEASES_KEY: ${{ secrets.hc-releases-key-staging }}
@@ -109,7 +109,7 @@ jobs:
         name: goreleaser release (with release notes)
         uses: goreleaser/goreleaser-action@v2
         with:
-          args: release --release-notes ${{ steps.release-notes-download.outputs.download-path }}/release-notes.txt --rm-dist ${{ inputs.goreleaser-release-args }} --debug
+          args: release --release-notes ${{ steps.release-notes-download.outputs.download-path }}/release-notes.txt --rm-dist ${{ inputs.goreleaser-release-args }}
         env:
           HC_RELEASES_HOST: ${{ secrets.hc-releases-host-staging }}
           HC_RELEASES_KEY: ${{ secrets.hc-releases-key-staging }}
