--- a/.github/workflows/hashicorp.yml
+++ b/.github/workflows/hashicorp.yml
@@ -66,7 +66,9 @@ on:
 
 jobs:
   Release:
-    runs-on: ubuntu-latest
+    # Reach out in #team-rel-eng to get your repositories allow-listed to use custom runners
+    # Custom runners range in size from 4 core to 64 core and sizes `small` through `xl` are supported
+    runs-on: [custom, linux, large]
     steps:
       - uses: actions/checkout@v3
         with:
