--- a/.github/workflows/generate-release-notes-v1.yml
+++ b/.github/workflows/generate-release-notes-v1.yml
@@ -7,6 +7,8 @@ jobs:
     # Custom runners range in size from 4 core to 64 core and sizes `small` through `xl` are supported
     runs-on: [custom, linux, large]
     steps:
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Generate Release Notes
         # This sed command
         # - Removes the first line of CHANGELOG.md if it contains a # character
