--- a/.github/workflows/generate-release-notes-v1.yml
+++ b/.github/workflows/generate-release-notes-v1.yml
@@ -9,6 +9,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          # Allow tag to be fetched when ref is a commit
+          fetch-depth: 0
       - name: Generate Release Notes
         # This sed command
         # - Removes the first line of CHANGELOG.md if it contains a # character
