--- a/.github/workflows/community.yml
+++ b/.github/workflows/community.yml
@@ -13,6 +13,10 @@ on:
         description: 'setup-go Go Version'
         required: true
         type: string
+      git-ref:
+        description: 'branch, tag or SHA to checkout'
+        required: false
+        type: string
     secrets:
       gpg-private-key:
         description: 'GPG Private Key'
@@ -25,8 +29,14 @@ jobs:
   Release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - if: inputs.git-ref == ''
+        uses: actions/checkout@v3
         with:
+          fetch-depth: 0
+      - if: inputs.git-ref != ''
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ inputs.git-ref }}
           fetch-depth: 0
       - uses: actions/setup-go@v3
         with:
