.github: Add actionlint configuration for custom labels and ignore download-path false positives

--- a/.github/workflows/ci-github-actions.yml
+++ b/.github/workflows/ci-github-actions.yml
@@ -18,4 +18,6 @@ jobs:
         with:
           go-version: 'stable'
       - run: go install github.com/rhysd/actionlint/cmd/actionlint@latest
-      - run: actionlint
+      # Ignore false positives with actions/download-artifact
+      # Reference: https://github.com/actions/download-artifact#download-path-output
+      - run: actionlint -ignore 'property "download-path" is not defined in object type {}'
