--- a/.github/workflows/community.yml
+++ b/.github/workflows/community.yml
@@ -29,7 +29,7 @@ jobs:
   Release:
     runs-on: ubuntu-latest
     steps:
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         with:
           ref: ${{ inputs.git-ref }}
           fetch-depth: 0
