--- a/.github/workflows/hashicorp.yml
+++ b/.github/workflows/hashicorp.yml
@@ -32,10 +32,6 @@ on:
         description: 'Product Version (e.g. v1.2.3 or github.ref_name)'
         required: true
         type: string
-      git-ref:
-        description: 'branch, tag or SHA to checkout'
-        required: false
-        type: string
 
     secrets:
       hc-releases-github-token:
@@ -74,15 +70,10 @@ jobs:
     # Custom runners range in size from 4 core to 64 core and sizes `small` through `xl` are supported
     runs-on: [custom, linux, large]
     steps:
-      - if: inputs.git-ref == ''
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         with:
+          ref: ${{ inputs.product-version }}
           # Allow tag to be fetched when ref is a commit
-          fetch-depth: 0
-      - if: inputs.git-ref != ''
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ inputs.git-ref }}
           fetch-depth: 0
       - uses: actions/setup-go@v3
         with:
