Change step name

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ permissions:
   issues: write
 
 jobs:
-  major-release-version:
+  major-version:
     runs-on: ubuntu-latest
     outputs:
       version: ${{ steps.major-version.outputs.version }}
@@ -63,7 +63,7 @@ jobs:
           git commit -a -m "Update changelog"
           git push
   release-tag:
-    needs: [ changelog, major-release-version ]
+    needs: [ changelog, major-version ]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -76,9 +76,9 @@ jobs:
           git config --global user.email "${{ env.CI_COMMIT_EMAIL }}"
           git pull
           git tag "${{ inputs.versionNumber }}"
-          git tag -f "${{ needs.major-release-version.outputs.version }}" 
+          git tag -f "${{ needs.major-version.outputs.version }}" 
           git push origin "${{ inputs.versionNumber }}"
-          git push origin -f "${{ needs.major-release-version.outputs.version }}"
+          git push origin -f "${{ needs.major-version.outputs.version }}"
 
   release:
     needs: [ changelog-version, changelog, release-tag ]
