--- a/.github/workflows/hashicorp.yml
+++ b/.github/workflows/hashicorp.yml
@@ -94,7 +94,7 @@ jobs:
         name: goreleaser release (without release notes)
         uses: goreleaser/goreleaser-action@f82d6c1c344bcacabba2c841718984797f664a6b # v4.2.0
         with:
-          args: release --rm-dist ${{ inputs.goreleaser-release-args }}
+          args: release --clean ${{ inputs.goreleaser-release-args }}
         env:
           HC_RELEASES_HOST: ${{ secrets.hc-releases-host-staging }}
           HC_RELEASES_KEY: ${{ secrets.hc-releases-key-staging }}
@@ -114,7 +114,7 @@ jobs:
         name: goreleaser release (with release notes)
         uses: goreleaser/goreleaser-action@f82d6c1c344bcacabba2c841718984797f664a6b # v4.2.0
         with:
-          args: release --release-notes ${{ steps.release-notes-download.outputs.download-path }}/release-notes.txt --rm-dist ${{ inputs.goreleaser-release-args }}
+          args: release --release-notes ${{ steps.release-notes-download.outputs.download-path }}/release-notes.txt --clean ${{ inputs.goreleaser-release-args }}
         env:
           HC_RELEASES_HOST: ${{ secrets.hc-releases-host-staging }}
           HC_RELEASES_KEY: ${{ secrets.hc-releases-key-staging }}
