--- a/.changes/unreleased/NOTES-20230217-160746.yaml
+++ b/.changes/unreleased/NOTES-20230217-160746.yaml
@@ -1,5 +1,5 @@
 kind: NOTES
-body: 'hashicorp: Replace deprecated `--rm-dist` flag with new `--clean` flag'
+body: 'hashicorp: Replace deprecated `goreleaser --rm-dist` flag with new `--clean` flag'
 time: 2023-02-17T16:07:46.357816-05:00
 custom:
   Issue: "39"
