--- a/.github/actionlint.yaml
+++ b/.github/actionlint.yaml
@@ -1,5 +1,4 @@
 self-hosted-runner:
   # Labels of self-hosted runner in array of string
   labels:
-    - custom
-    - large
+    - custom-linux-large
