add custom 22.04 label in actionlint.yaml

--- a/.github/actionlint.yaml
+++ b/.github/actionlint.yaml
@@ -2,3 +2,4 @@ self-hosted-runner:
   # Labels of self-hosted runner in array of string
   labels:
     - custom-linux-large
+    - custom-ubuntu-22.04-x64-16core
